# automation

./: .env-example  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.old
.github/workflows/: hetzner-prd-workflow.yml
src/: main.py
src/config/: __init__.py  config.py  logging.py
src/jobs/banbroadcaster/: functions.py  queries.py
src/jobs/kafka/players/: main.py
src/jobs/tipoff/: main.py  queries.py
