[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.5",
    "aiokafka>=0.12.0",
    "discord-py==2.2.3",
    "discord-webhook==1.1.0",
    "pandas>=2.0.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "requests-oauthlib==1.3.1",
    "sqlalchemy==2.0.16",
]
